# erp-blockchain

./: .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.github/workflows/: release.yml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/assembly/: Cargo.toml
pallets/assembly/src/: blogic.rs  lib.rs  types.rs  weights.rs
pallets/inventory/: Cargo.toml
pallets/inventory/src/: benchmarking.rs  blogic.rs  core.rs  lib.rs  mock.rs  types.rs  weights.rs
pallets/template/src/: blogic.rs  lib.rs  mock.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs  types.json
src/: lib.rs
